[tool.poetry]
name = "poetry-dev"
version = "0.1.0"
description = "A collection of scripts replace local packages with versions and vice versa"
authors = ["Marc Rijken <marc@rijken.org>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
tomlkit = "^0.7.0"
toml-cli = {path = "../toml-cli"}

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
poetry_dev = 'poetry_dev:app'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
