[tool.poetry]
name = "poetry-dev"
version = "0.1.3"
description = "A collection of scripts replace local packages with versions and vice versa"
authors = ["Marc Rijken <marc@rijken.org>"]
license = "MIT"
repository = "https://github.com/mrijken/poetry-dev"
readme = "README.md"
packages = [
    { include = "poetry_dev" },
]

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.3.2"
tomlkit = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.11.1"

[tool.poetry.scripts]
poetry_dev = 'poetry_dev:app'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov"
testpaths = ["tests"]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
